--- a/index.html
+++ b/index.html
@@ -15,47 +15,60 @@
                 <th>Type 1 &nbsp; ▼</th>
                 <th>Type 2 &nbsp; ▼</th>
             </tr>
-            <tr>
+            <tr class="pokemon_row">
                 <td>1</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/1.png" alt="Bulbasaur"></td>
-                <td>Bulbasaur</td>
-                <td>Grass</td>
-                <td>Poison</td>
+                <td class="Poke_Name">Bulbasaur</td>
+                <td>
+                    <button class="type_grass">Grass</button>
+                </td>
+                <td>
+                    <button class="type_poison">Poison</button>
+                </td>
             </tr>
-            <tr class="row_highlight">
+            <tr class="row_highlight pokmeon_row">
                 <td>2</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/2.png" alt="Ivysaur"></td>
-                <td>Ivysaur</td>
-                <td>Grass</td>
-                <td>Poison</td>
+                <td class="Poke_Name">Ivysaur</td>
+                <td>
+                    <button class="type_grass">Grass</button><br/>
+                    <button class="type_poison">Poison</button>
+                </td>
+                <td></td>
             </tr>
-            <tr class="odd_row">
+            <tr  class="pokemon_row">
                 <td>3</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/3.png" alt="Venusaur"></td>
-                <td>Venusaur</td>
-                <td>Grass</td>
-                <td>Poison</td>
+                <td class="Poke_Name">Venusaur</td>
+                <td class="type_grass">Grass</td>
+                <td class="type_poison">Poison</td>
             </tr>
-            <tr class="row_highlight">
+            <tr class="row_highlight pokemon_row">
                 <td>4</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/4.png" alt="Charmander"></td>
-                <td>Charmander</td>
-                <td>Fire</td>
+                <td class="Poke_Name">Charmander</td>
+                <td class="type_fire">Fire</td>
                 <td></td>
             </tr>
-            <tr class="odd_row">
+            <tr  class="pokemon_row">
                 <td>5</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/5.png" alt="Charmeleon"></td>
-                <td>Charmeleon</td>
-                <td>Fire</td>
+                <td class="Poke_Name">Charmeleon</td>
+                <td>
+                    <button class="type_fire">Fire</button><br/>
+                    <button></button>
+                </td>
                 <td></td>
             </tr>
-            <tr class="row_highlight">
+            <tr class="row_highlight pokemon_row">
                 <td>6</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/6.png" alt="Charizard"></td>
-                <td>Charizard</td>
-                <td>Fire</td>
-                <td>Flying</td>
+                <td class="Poke_Name">Charizard</td>
+                <td>
+                    <button class="type_fire">Fire</button><br/>
+                    <button class="type_flying">Flying</button>
+                </td>
+                <td></td>
             </tr>
         </table>
     </div>
