--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div>
+  <div>
         <table>
             <tr class="header_row">
                 <th>Dex # &nbsp; ▼</th>
@@ -31,44 +31,55 @@
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/2.png" alt="Ivysaur"></td>
                 <td class="Poke_Name">Ivysaur</td>
                 <td>
-                    <button class="type_grass">Grass</button><br/>
+                    <button class="type_grass">Grass</button>
+                </td>
+                <td>
                     <button class="type_poison">Poison</button>
                 </td>
-                <td></td>
             </tr>
             <tr  class="pokemon_row">
                 <td>3</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/3.png" alt="Venusaur"></td>
                 <td class="Poke_Name">Venusaur</td>
-                <td class="type_grass">Grass</td>
-                <td class="type_poison">Poison</td>
+                <td>
+                    <button class="type_grass">Grass</button>
+                </td>
+                <td>
+                    <button class="type_poison">Poison</button>
+                </td>
             </tr>
             <tr class="row_highlight pokemon_row">
                 <td>4</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/4.png" alt="Charmander"></td>
                 <td class="Poke_Name">Charmander</td>
-                <td class="type_fire">Fire</td>
-                <td></td>
+                <td>
+                    <button class="type_fire">Fire</button>
+                </td>
+                <td>
+                    <button></button>
+                </td>
             </tr>
             <tr  class="pokemon_row">
                 <td>5</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/5.png" alt="Charmeleon"></td>
                 <td class="Poke_Name">Charmeleon</td>
                 <td>
-                    <button class="type_fire">Fire</button><br/>
+                    <button class="type_fire">Fire</button>
+                </td>
+                <td>
                     <button></button>
                 </td>
-                <td></td>
             </tr>
             <tr class="row_highlight pokemon_row">
                 <td>6</td>
                 <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/6.png" alt="Charizard"></td>
                 <td class="Poke_Name">Charizard</td>
                 <td>
-                    <button class="type_fire">Fire</button><br/>
-                    <button class="type_flying">Flying</button>
+                  <button class="type_fire">Fire</button>
                 </td>
-                <td></td>
+                <td>
+                  <button class="type_flying">Flying</button>
+                </td>
             </tr>
         </table>
     </div>
