--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </tr>
          </table>
       </div>
-      <script src="main.js">
+      <script src="index.js">
 
       </script>
    </body>
