--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="UTF-8">
-      <title>Example Page</title>
-      <link rel="stylesheet" href="index.css">
+        <meta charset="UTF-8">
+        <title>Example Page</title>
+        <link rel="stylesheet" href="index.css">
    </head>
    <body>
-      <div>
+      <div class="pokemon_table">
          <table id="pokemon">
             <tr class="header_row">
                <th onclick="sortTable(0)" class="sortable">Dex # &nbsp; ▼</th>
@@ -16,7 +16,7 @@
                <th>Type 2</th>
             </tr>
             <tr>
-               <td>1</td>
+               <td>001</td>
                <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/1.png" alt="Bulbasaur"></td>
                <td class="Poke_Name"><a href="#">Bulbasaur</a></td>
                <td>
@@ -27,9 +27,9 @@
                </td>
             </tr>
             <tr>
-               <td>2</td>
+               <td>002</td>
                <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/2.png" alt="Ivysaur"></td>
-               <td class="Poke_Name">Ivysaur</td>
+               <td class="Poke_Name"><a href="#">Ivysaur</a></td>
                <td>
                   <button class="type_grass">Grass</button>
                </td>
@@ -38,9 +38,9 @@
                </td>
             </tr>
             <tr>
-               <td>3</td>
+               <td>003</td>
                <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/3.png" alt="Venusaur"></td>
-               <td class="Poke_Name">Venusaur</td>
+               <td class="Poke_Name"><a href="#">Venusaur</a></td>
                <td>
                   <button class="type_grass">Grass</button>
                </td>
@@ -49,9 +49,9 @@
                </td>
             </tr>
             <tr>
-               <td>4</td>
+               <td>004</td>
                <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/4.png" alt="Charmander"></td>
-               <td class="Poke_Name">Charmander</td>
+               <td class="Poke_Name"><a href="#">Charmander</a></td>
                <td>
                   <button class="type_fire">Fire</button>
                </td>
@@ -60,9 +60,9 @@
                </td>
             </tr>
             <tr>
-               <td>5</td>
+               <td>005</td>
                <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/5.png" alt="Charmeleon"></td>
-               <td class="Poke_Name">Charmeleon</td>
+               <td class="Poke_Name"><a href="#">Charmeleon</a></td>
                <td>
                   <button class="type_fire">Fire</button>
                </td>
@@ -71,9 +71,9 @@
                </td>
             </tr>
             <tr>
-               <td>6</td>
+               <td>006</td>
                <td><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/6.png" alt="Charizard"></td>
-               <td class="Poke_Name">Charizard</td>
+               <td class="Poke_Name"><a href="#">Charizard</a></td>
                <td>
                   <button class="type_fire">Fire</button>
                </td>
@@ -83,8 +83,6 @@
             </tr>
          </table>
       </div>
-      <script src="index.js">
-
-      </script>
+      <script src="index.js"></script>
    </body>
 </html>
